# super-monitor

./: .env.example  .gitignore  PLAN.md  README.md  docker-compose.yml  nginx.conf
docs/: README.md  api.md  database.md  deployment.md  phase1.md  phase2.md  phase3.md  phase4.md  phase5.md  sdk.md  tracking.md  usage-guide.md
examples/sdk-demo/: README.md  about.html  dashboard.html  detail.html  index.html  mock-server.mjs  package-lock.json  package.json  vite.config.js
examples/sdk-demo/src/: main.js  styles.css
monitor-server/: .env.example  Cargo.toml  Dockerfile  README.md  clippy.toml  rustfmt.toml
monitor-server/migration/: Cargo.toml
monitor-server/migration/src/: lib.rs  m20240101_000001_create_users_table.rs  m20240201_000001_create_groups_table.rs  m20240201_000002_create_projects_table.rs  m20240201_000003_create_js_errors_table.rs  m20240201_000004_create_network_errors_table.rs  m20240201_000005_create_performance_data_table.rs  m20240201_000006_create_track_tables.rs  m20240301_000001_create_event_stats_table.rs  m20240301_000002_create_event_definitions_table.rs  m20240401_000001_create_ai_analyses_table.rs  m20240401_000002_create_alert_tables.rs  m20240401_000003_create_funnel_retention_sourcemap_tables.rs  m20240401_000004_add_track_event_context_columns.rs  m20240501_000001_add_performance_indexes.rs
monitor-server/src/: config.rs  db.rs  error.rs  lib.rs  main.rs  router.rs  utils.rs
monitor-server/src/handlers/: ai_analysis.rs  alert.rs  auth.rs  dashboard.rs  error.rs  group.rs  mod.rs  network.rs  project.rs  sdk.rs  sourcemap.rs  track_analysis.rs  track_users.rs  tracking.rs  user.rs
monitor-server/src/middleware/: auth.rs  cors.rs  mod.rs  rate_limit.rs  security_headers.rs
monitor-server/src/models/: ai_analysis.rs  alert_log.rs  alert_rule.rs  event_definition.rs  group.rs  js_error.rs  mod.rs  network_error.rs  performance_datum.rs  project.rs  project_member.rs  source_map.rs  track_event.rs  track_event_stats.rs  track_funnel.rs  track_id_mapping.rs  track_retention_config.rs  track_user_profile.rs  user.rs
monitor-server/src/services/: ai_service.rs  alert_service.rs  identity_service.rs  mod.rs  sourcemap_service.rs  stats_service.rs  track_service.rs
monitor-web/: .eslintrc.cjs  .gitignore  .prettierrc.json  Dockerfile  README.md  index.html  nginx.conf  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
monitor-web/__tests__/: sse.test.ts  useProjectSwitch.test.ts
monitor-web/src/: App.vue  main.ts
monitor-web/src/api/: ai.ts  alert.ts  auth.ts  dashboard.ts  error.ts  group.ts  index.ts  network.ts  project.ts  sourcemap.ts  tracking.ts  user.ts
monitor-web/src/composables/: index.ts  useChart.ts  useProjectSwitch.ts  useTableList.ts
monitor-web/src/router/: index.ts
monitor-web/src/stores/: project.ts  user.ts
monitor-web/src/styles/: index.scss
monitor-web/src/utils/: common.ts  format.ts  request.ts  sse.ts
sdk/: .gitignore  README.md  package.json  pnpm-lock.yaml  rollup.config.mjs  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts
sdk/__tests__/: breadcrumb-buffer.test.ts  error.test.ts  identity.test.ts  monitor.test.ts  network.test.ts  reporter.test.ts  store.test.ts  super-props.test.ts  timer.test.ts  utils.test.ts
sdk/src/: index.ts
sdk/src/core/: identity.ts  (+7 more)
(+33 files in other folders)
