[package]
name = "monitor-server"
version = "0.1.0"
edition = "2021"
description = "JS Monitor Server (Axum + SeaORM)"

[[bin]]
name = "monitor-server"
path = "src/main.rs"

[lib]
name = "monitor_server"
path = "src/lib.rs"

[dependencies]
axum = { version = "0.7", features = ["macros", "multipart"] }
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
sea-orm = { version = "1.0", default-features = false, features = [
    "sqlx-postgres",
    "runtime-tokio-native-tls",
    "macros",
    "with-json",
    "with-chrono",
    "with-rust_decimal",
    "with-bigdecimal",
    "with-uuid",
    "with-time",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
jsonwebtoken = "9"
bcrypt = "0.15"
redis = { version = "0.24", features = ["tokio-comp", "aio"] }
reqwest = { version = "0.12", features = ["json"] }
sourcemap = "6"
config = "0.14"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
async-trait = "0.1"
migration = { path = "./migration" }
sea-orm-migration = { version = "1.0", default-features = false, features = ["runtime-tokio-native-tls", "sqlx-postgres"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
serde_json = "1.0"

[workspace]
members = [".", "migration"]
